i am getting sloopy. lots of bugs in my code. gotta fix them all.

--- a/dashline/templates/timeline/show.html
+++ b/dashline/templates/timeline/show.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 	<h2>{{ timeline.title }}</h2>
-	<h3>by <a href='#TODO'>{{ timeline.owner }}, created {{ timeline.date_created|date:'d/m/Y' }}</a></h3>
+	<h3>by <a href='#TODO'>{{ timeline.owner }}</a>, created {{ timeline.date_created|date:'d/m/Y' }}</h3>
 	<p>{{ timeline.description|linebreaksbr }}</p>
 	
 	<ul>
