--- a/dashline/templates/profiles/edit_profile.html
+++ b/dashline/templates/profiles/edit_profile.html
@@ -2,7 +2,7 @@
 {% block title %}Edit Profile{% endblock %}
  
 {% block content %}
-<h1>Edit contact info for {{ user }} </h1>
+<h1>Edit contact info for</h1>
  
 <form method="POST" action="">
     {{ form }}
