--- a/dashline/templates/base.html
+++ b/dashline/templates/base.html
@@ -97,6 +97,7 @@
 			    {% if not user.is_authenticated %}
 				    <li><a href="{% url django.contrib.auth.views.login %}">Login</a></li>
 				{% else %}
+				    <li><a href="">Edit profile</a></li>
 				    <li><a href="{% url django.contrib.auth.views.logout %}">Logout</a></li>
 				{% endif %}
 			</ol>
