changed registration form

--- a/dashline/templates/registration/registration_form.html
+++ b/dashline/templates/registration/registration_form.html
@@ -1,1 +1,8 @@
-{{ form }}
+{% extends "base.html" %}
+
+{% block content %}
+<form method="post" action=".">{% csrf_token %}
+    {{ form }}
+    <input type="submit">
+</form>
+{% endblock %}
