--- a/dashline/templates/profiles/create_profile.html
+++ b/dashline/templates/profiles/create_profile.html
@@ -1,3 +1,12 @@
-Create your profile
-
-{{ form }}
+{% extends "base.html" %}
+{% block title %}- Create Profile{% endblock %}
+ 
+{% block content %}
+<h1>Create your profile</h1>
+ 
+<form method="POST" action="">{% csrf_token %}
+    {{ form }}
+    <input type="submit" name="submit" value="Update" id="submit">
+</form>
+ 
+{% endblock content %}
