--- a/dashline/templates/profiles/edit_profile.html
+++ b/dashline/templates/profiles/edit_profile.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>Edit contact info for</h1>
  
-<form method="POST" action="">
+<form method="POST" action="">{% csrf_token %}
     {{ form }}
     <input type="submit" name="submit" value="Update" id="submit">
 </form>
