refactored urls of timeline and timeline/create.html

--- a/dashline/templates/base.html
+++ b/dashline/templates/base.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8" />
 	
-	<title>Dashline {% block title %}{% endblock %}</title>
+	<title>Dashline - {% block title %}Home{% endblock %}</title>
 	
 	<meta name="description" content="Dashline - Your events, your time.">
 	<!-- Google will often use this as its description of your page/site. Make it good. -->
