--- a/dashline/templates/timeline/create.html
+++ b/dashline/templates/timeline/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block Title %}Create a new Timeline{% endblock %}
+{% block title %}Create a new Timeline{% endblock %}
 
 {% block content %}
 		<h2>Create a new timeline</h2>
@@ -8,10 +8,10 @@
 		<p>Fill this form to create a new timeline.</p>
 		
 		{% if form.errors %}
-			{{ form. errors }}
+			{{ form.errors }}
 		{% endif %}
 		
-		<form action='{% url create %}' method='post'>
+		<form action='{% url timeline_create %}' method='post'>{% csrf_token %}
 			{{ form }}
 			<input type='submit' value='Create!' />
 		</form>
