--- a/dashline/templates/base.html
+++ b/dashline/templates/base.html
@@ -93,15 +93,22 @@
 		
 		<h1><a href="/">Dashline home</a></h1>
 		<nav>		
-			<ol>
+			<ul id="menu">
+				<li id="home"><a href='{# url home #}'><b>Home</b></a></li>
+				
 			    {% if not user.is_authenticated %}
 				    <li><a href="{% url django.contrib.auth.views.login %}">Login</a></li>
 				    <li><a href="{% url registration_register %}">Register</a></li>
 				{% else %}
 				    <li><a href="{% url profiles_edit_profile %}">Edit profile</a></li>
 				    <li><a href="{% url django.contrib.auth.views.logout %}">Logout</a></li>
-				{% endif %}
-			</ol>
+				{% endif %}		
+			
+				<li id="dropline"><a href="{# url browser #}"><b>Browse</b></a></li>
+				<li id="flyout"><a href="{# url create #}"><b>Create</b></a></li>
+				<li id="support"><a href="{# url about #}"><b>About</b></a></li>
+				<li id="contact"><a href="{# url contact #}"><b>Contact</b></a></li>
+			</ul>
 		</nav>
 	</header>
     
