a better menu (for now)

--- a/dashline/media/html5/css/core.css
+++ b/dashline/media/html5/css/core.css
@@ -84,21 +84,25 @@ filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../../img/backgro
 #menu li a:active,
 #menu li a:focus,
 .home #menu li#home a,
-.single #menu li#single a,
-.dropdown #menu li#dropdown a,
-.dropline #menu li#dropline a,
-.flyout #menu li#flyout a,
-.support #menu li#support a,
+.login #menu li#login a,
+.register #menu li#register a,
+.edit_profile #menu li#edit_profile a,
+.logout #menu li#logout a,
+.browse #menu li#browse a,
+.create #menu li#create a,
+.about #menu li#about a, 
 .contact #menu li#contact a
 {background:#999 url(../../img/divide2.png) no-repeat right top; cursor:pointer; color:#fff; line-height:35px;}
 #menu li a:hover b,
 #menu li a:active b,
 #menu li a:focus b,
 .home #menu li#home a b,
-.single #menu li#single a b,
-.dropdown #menu li#dropdown a b,
-.dropline #menu li#dropline a b,
-.flyout #menu li#flyout a b,
-.support #menu li#support a b,
-.contact #menu li#contact a b
+.login #menu li#login a b,
+.register #menu li#register a b,
+.edit_profile #menu li#edit_profile a b,
+.logout #menu li#logout a b,
+.browse #menu li#browse a b,
+.create #menu li#create a b,
+.about #menu li#about a b,
+.contact #menu li#contact  a b
 { background:#999; cursor:pointer;}
