--- a/dashline/templates/menu.html
+++ b/dashline/templates/menu.html
@@ -1,18 +1,18 @@
 		<nav class='nav clear'>        
 						<ul>
 							<li id="home"><a href='{# url home #}'><b>Home</b></a></li>
-							
 							{% if not user.is_authenticated %}
 								<li id="login"><a href="{% url django.contrib.auth.views.login %}"><b>Login</b></a></li>
 								<li id="register"><a href="{% url registration_register %}"><b>Register</b></a></li>
 							{% else %}
 								<li id="edit_profile"><a href="{% url profiles_edit_profile %}"><b>Edit profile</b></a></li>
-								<li id="logout"><a href="{% url django.contrib.auth.views.logout %}"><b>Logout</b></a></li>
-							{% endif %}		
-						
+							{% endif %}
 							<li id="browse"><a href="{# url browser #}"><b>Browse</b></a></li>
 							<li id="create"><a href="{# url create #}"><b>Create</b></a></li>
-							<li id="about"><a href="{# url about #}"><b>About </b></a></li>
 							<li id="contact"><a href="{# url contact #}"><b>Contact</b></a></li>
+							<li id="about"><a href="{# url about #}"><b>About </b></a></li>
+							{% if user.is_authenticated %}
+								<li id="logout"><a href="{% url django.contrib.auth.views.logout %}"><b>Logout</b></a></li>
+							{% endif %}
 						</ul>
 		</nav>			
