--- a/dashline/templates/registration/registration_form.html
+++ b/dashline/templates/registration/registration_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <form method="post" action=".">{% csrf_token %}
-    {{ form }}
+    {{ form.as_p }}
     <input type="submit">
 </form>
 {% endblock %}
