--- a/dashline/templates/registration/login.html
+++ b/dashline/templates/registration/login.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block title %}Login{% endblock %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+{% block content %}
+<h1>Login</h1>
+
+	{% if form.errors %}
+	<p class='error'>Your username and password didn't match. Please try again.</p>
+	{% endif %}
 
 <form method="post" action="{% url django.contrib.auth.views.login %}">{% csrf_token %}
 <!--table>
