--- a/dashline/templates/registration/registration_form.html
+++ b/dashline/templates/registration/registration_form.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
+{% block title %}Register{% endblock %}
+
 {% block content %}
+<h1>Create an account</h1>
+
 <form method="post" action=".">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit">
