--- a/dashline/templates/base.html
+++ b/dashline/templates/base.html
@@ -64,7 +64,7 @@
 	<header>
 		
 		<div>
-			<h1>Dashline</h1>
+			<h1><a href='{% url views_home %}'>Dashline</a></h1>
 			<h3>and we need a slogan</h3>
         </div>
 
