--- a/dashline/templates/profiles/profile_detail.html
+++ b/dashline/templates/profiles/profile_detail.html
@@ -3,4 +3,7 @@
 {% block content %}
 <h1>{{ user }}</h1>
 {{ profile.avatar|safe }}
+<ul>
+    {% if profile.twitter %}<li>Twitter: {{ profile.twitter }}</li>{% endif %}
+</ul>
 {% endblock %}
