added some fields to profile

--- a/dashline/templates/profiles/create_profile.html
+++ b/dashline/templates/profiles/create_profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}- Create Profile{% endblock %}
+{% block title %}Create Profile{% endblock %}
  
 {% block content %}
 <h1>Create your profile</h1>
