--- a/dashline/templates/profiles/profile_detail.html
+++ b/dashline/templates/profiles/profile_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>{{ user }}</h1>
+<h1>{{ profile.user.username }}</h1>
 {{ profile.avatar|safe }}
 about: {{ profile.description }}
 country: {{ profile.country }}
