Moved about and contact to footer.

--- a/dashline/templates/base.html
+++ b/dashline/templates/base.html
@@ -92,7 +92,7 @@
 	
 	<footer>
 		<div>
-			<p><small>&copy; Copyright Dashline Team 2010. All Rights Reserved. This website is Pony Powered.</small></p>	
+			<p><small>&copy; Copyright Dashline Team 2010. All Rights Reserved. This website is Pony Powered.<br/><a href="{# url contact #}"><b>Contact</b></a> | <a href="{# url about #}"><b>About</b></a></small></p>	
 		</div>
 	</footer>
     
