all I care is color.

--- a/dashline/media/html5/css/core.css
+++ b/dashline/media/html5/css/core.css
@@ -252,7 +252,7 @@ p{
 }
 
 .footer a,.footer a:visited{
-	color:#cccccc;
+	color: white;
 	background-color:#213e4a;
 	display:block;
 	padding:2px 4px;
