--- a/dashline/templates/menu.html
+++ b/dashline/templates/menu.html
@@ -10,7 +10,7 @@
 								<li id="edit_profile"><a href="{% url profiles_edit_profile %}"><b>Edit profile</b></a></li>
 							{% endif %}
 							<li id="browse"><a href="{# url browser #}"><b>Browse</b></a></li>
-							<li id="create"><a href="{# url create #}"><b>Create</b></a></li>
+							<li id="create"><a href="{# url create #}"><b>Create a Timeline</b></a></li>
 							
 							{% if user.is_authenticated %}
 								<li id="logout"><a href="{% url django.contrib.auth.views.logout %}"><b>Logout</b></a></li>
