Using forms as p and adding headers.

--- a/dashline/templates/profiles/create_profile.html
+++ b/dashline/templates/profiles/create_profile.html
@@ -5,8 +5,8 @@
 <h1>Create your profile</h1>
  
 <form method="POST" action="">{% csrf_token %}
-    {{ form }}
-    <input type="submit" name="submit" value="Update" id="submit">
+    {{ form.as_p }}
+    <p><input type="submit" name="submit" value="Update" id="submit"></p>
 </form>
  
 {% endblock content %}
