--- a/dashline/templates/registration/login.html
+++ b/dashline/templates/registration/login.html
@@ -22,7 +22,7 @@
 </table-->
 
 	{{ form.as_p }}
-<input type="submit" value="login" />
+	<p><input type="submit" value="login" /></p>
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
