--- a/dashline/templates/registration/registration_form.html
+++ b/dashline/templates/registration/registration_form.html
@@ -7,6 +7,6 @@
 
 <form method="post" action=".">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit">
+    <p><input type="submit"></p>
 </form>
 {% endblock %}
