--- a/dashline/templates/profiles/edit_profile.html
+++ b/dashline/templates/profiles/edit_profile.html
@@ -2,11 +2,11 @@
 {% block title %}Edit Profile{% endblock %}
  
 {% block content %}
-<h1>Edit contact info for</h1>
+<h1>Edit your Profile</h1>
  
 <form method="POST" action="">{% csrf_token %}
-    {{ form }}
-    <input type="submit" name="submit" value="Update" id="submit">
+    {{ form.as_p }}
+    <p><input type="submit" name="submit" value="Update" id="submit"></p>
 </form>
  
 {% endblock content %}
