--- a/dashline/templates/profiles/profile_detail.html
+++ b/dashline/templates/profiles/profile_detail.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}{{ profile.user.username }}{ % endblock %}
+
 {% block content %}
 <h1>{{ profile.user.username }}</h1>
 {{ profile.avatar|safe }}
