--- a/dashline/templates/registration/logout.html
+++ b/dashline/templates/registration/logout.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Logout{% endblock %}
 {% block content %}
-Successful logout.
+	<h1>Logout</h1>
+	<p>Successful logout. We hope you come back.</p>
 {% endblock %}
