--- a/dashline/templates/registration/registration_complete.html
+++ b/dashline/templates/registration/registration_complete.html
@@ -1,2 +1,7 @@
-Thanks for register.
-Look at your e-mail.
+{% extends 'base.html' %}
+
+{% block title %}Registration Ok{% endblock %}
+{% block content %}
+	<h1>Congratulations,</h1>
+	<p>Thanks for registering with us. In order to proceed, please take a look at the e-mail we sent to your e-mail address.</p>
+{% endblock %}
