Some files I forgot to change last time I commited.

--- a/dashline/templates/timeline/create.html
+++ b/dashline/templates/timeline/create.html
@@ -12,8 +12,8 @@
 		{% endif %}
 		
 		<form action='{% url timeline_create %}' method='post'>{% csrf_token %}
-			{{ form }}
-			<input type='submit' value='Create!' />
+			{{ form.as_p }}
+			<p><input type='submit' value='Create!' /></p>
 		</form>
 		
 {% endblock %}
