fixed title of profile detail

--- a/dashline/templates/profiles/profile_detail.html
+++ b/dashline/templates/profiles/profile_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ profile.user.username }}{ % endblock %}
+{% block title %}{{ profile.user.username }}'s profile{% endblock %}
 
 {% block content %}
 <h1>{{ profile.user.username }}</h1>
