--- a/dashline/templates/search/search.html
+++ b/dashline/templates/search/search.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load pagination_tags %}
+
 {% block content %}
     <h2>Search</h2>
 
@@ -16,22 +18,15 @@
 
         {% if query %}
             <h3>Results</h3>
-
-            {% for result in page.object_list %}
+            {% autopaginate object_list 10 %}
+            {% for result in object_list %}
                 <p>
                     <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
                 </p>
             {% empty %}
                 <p>No results found.</p>
             {% endfor %}
-
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-                </div>
-            {% endif %}
+            {% paginate %}
         {% else %}
             {# Show some example queries to run, maybe query syntax, something else? #}
         {% endif %}
