separating base in index.html

--- a/dashline/templates/base.html
+++ b/dashline/templates/base.html
@@ -5,7 +5,7 @@
 <head class="html5reset-kitchensink-commented">
 	<meta charset="utf-8" />
 	
-	<title>Dashline - {% block title %}Home{% endblock %}</title>
+	<title>Dashline - {% block title %}{% endblock %}</title>
 	
 	<meta name="description" content="Dashline - Your events, your time.">
     <meta name="author" content="Felipe Rafael Prenholato (chronossc) <philipe.rp@gmail.com>" />
