--- a/dashline/templates/timeline/add_entry.html
+++ b/dashline/templates/timeline/add_entry.html
@@ -5,6 +5,9 @@
 {% block extrajs %} 
 	<script type="text/javascript" src="{{MEDIA_URL}}/js/jquery.formset.min.js"></script>
 	
+	<link rel="stylesheet" type="text/css" href="http://jquery-ui.googlecode.com/svn/tags/latest/themes/base/jquery-ui.css" media="all" />
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+
 	<script type="text/javascript">
 		$(function() {
 			$('#id_entry tbody tr').formset({
@@ -15,7 +18,18 @@
 				prefix: 'timeline'
 			})
 		})
+		
 	</script>
+	
+	<script type="text/javascript">
+    $(function() {
+        $('input[id*=when]').datepicker();
+		
+		$('input[id*=when]').live('focus', function(){ $(this).datepicker()});
+    });
+	</script>
+
+
 	<style type="text/css">
 		.delete-row {
 			margin-left:5px;
@@ -35,13 +49,12 @@
 				<form method="post" action="{{ request.path }}">
 				{% csrf_token %}
 					<table id="id_entry" border="0" cellpadding="0" cellspacing="5">
-						<thead>
+						<thead style='color: black;'>
 							<tr>
 								<th scope="col">Title</th>
-								<th scope="col">Type</th>
 								<th scope="col">Date</th>
 								<th scope="col">Description</th>
-								<th scope="col">Content</th>
+								<th scope="col">Type/Content</th>
 							</tr>
 						</thead>
 						
@@ -53,10 +66,9 @@
 									{% if form.instance.pk %}{{ form.DELETE }}{% endif %}
 									{{ form.title }}
 								</td>
-								<td>{{ form.entry_type }}</td>
 								<td>{{ form.when }}</td>
 								<td>{{ form.description }}</td>
-								<td>{{ form.entry_content }}</td>
+								<td>{{ form.entry_type }}<br/>{{ form.entry_content }}</td>
 							</tr>
 							{% endfor %}
 						</tbody>
