i need links to click in order to make sure stuff is working.

--- a/dashline/templates/timeline/browse.html
+++ b/dashline/templates/timeline/browse.html
@@ -10,7 +10,7 @@
     <ul>
     {% autopaginate timelines 4 %}
 	{% for timeline in timelines %}
-		<li>{{ timeline }}</li>
+		<li><a href='{% url timeline_show timeline.slug %}'>{{ timeline }}</a></li>
 	{% endfor %}
 	{% paginate %}
 	</ul>
